# sfml3-android

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  main.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
